tests/baselines/reference/classTypeParametersInStatics.errors.txt
classTypeParametersInStatics.ts(1,8): error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
classTypeParametersInStatics.ts(12,40): error TS2302: Static members cannot reference class type parameters.
classTypeParametersInStatics.ts(13,29): error TS2302: Static members cannot reference class type parameters.
classTypeParametersInStatics.ts(13,43): error TS2302: Static members cannot reference class type parameters.


==== classTypeParametersInStatics.ts (4 errors) ====
    module Editor {
           ~~~~~~
!!! error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
    
    
        export class List<T> {
            public next: List<T>;
            public prev: List<T>;
    
            constructor(public isHead: boolean, public data: T) {
            
            }
    
            public static MakeHead(): List<T> { // should error
                                           ~
!!! error TS2302: Static members cannot reference class type parameters.
                var entry: List<T> = new List<T>(true, null);
                                ~
!!! error TS2302: Static members cannot reference class type parameters.
                                              ~
!!! error TS2302: Static members cannot reference class type parameters.
                entry.prev = entry;
                entry.next = entry;
                return entry;
            }        
    
            public static MakeHead2<T>(): List<T> { // should not error
                var entry: List<T> = new List<T>(true, null);
                entry.prev = entry;
                entry.next = entry;
                return entry;
            }  
    
            public static MakeHead3<U>(): List<U> { // should not error
                var entry: List<U> = new List<U>(true, null);
                entry.prev = entry;
                entry.next = entry;
                return entry;
            }  
        }
    }